Added Layouts to be modifiable

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,550 +13,9 @@
     tools:context="com.example.chris.gitarrverkstad.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <GridLayout
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="8"
-            android:layout_column="5"
-            android:id="@+id/FrHour8" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="8"
-            android:layout_column="4"
-            android:id="@+id/ThHour8" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="8"
-            android:layout_column="3"
-            android:id="@+id/WeHour8" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="8"
-            android:layout_column="2"
-            android:id="@+id/TuHour8"/>
-
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="8"
-            android:layout_column="1"
-            android:id="@+id/MoHour8" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="7"
-            android:layout_column="5"
-            android:id="@+id/FrHour7" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="7"
-            android:layout_column="4"
-            android:id="@+id/ThHour7" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="7"
-            android:layout_column="3"
-            android:id="@+id/WeHour7" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="7"
-            android:layout_column="2"
-            android:id="@+id/TuHour7"/>
-
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="7"
-            android:layout_column="1"
-            android:id="@+id/MoHour7" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="6"
-            android:layout_column="5"
-            android:id="@+id/FrHour6" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="6"
-            android:layout_column="4"
-            android:id="@+id/ThHour6" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="6"
-            android:layout_column="3"
-            android:id="@+id/WeHour6" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="6"
-            android:layout_column="2"
-            android:id="@+id/TuHour6"/>
-
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="6"
-            android:layout_column="1"
-            android:id="@+id/MoHour6" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="L"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="5"
-            android:layout_column="5"
-            android:id="@+id/FrHour5" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="L"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="5"
-            android:layout_column="4"
-            android:id="@+id/ThHour5" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="L"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="5"
-            android:layout_column="3"
-            android:id="@+id/WeHour5" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="L"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="5"
-            android:layout_column="2"
-            android:id="@+id/TuHour5"/>
-
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="L"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="5"
-            android:layout_column="1"
-            android:id="@+id/MoHour5" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="4"
-            android:layout_column="5"
-            android:id="@+id/FrHour4" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="4"
-            android:layout_column="4"
-            android:id="@+id/ThHour4" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="4"
-            android:layout_column="3"
-            android:id="@+id/WeHour4" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="4"
-            android:layout_column="2"
-            android:id="@+id/TuHour4"/>
-
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="4"
-            android:layout_column="1"
-            android:id="@+id/MoHour4" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="3"
-            android:layout_column="5"
-            android:id="@+id/FrHour3" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="3"
-            android:layout_column="4"
-            android:id="@+id/ThHour3" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="3"
-            android:layout_column="3"
-            android:id="@+id/WeHour3" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="3"
-            android:layout_column="2"
-            android:id="@+id/TuHour3"/>
-
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="3"
-            android:layout_column="1"
-            android:id="@+id/MoHour3" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="2"
-            android:layout_column="5"
-            android:id="@+id/FrHour2" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="2"
-            android:layout_column="4"
-            android:id="@+id/ThHour2" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="2"
-            android:layout_column="3"
-            android:id="@+id/WeHour2" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="2"
-            android:layout_column="2"
-            android:id="@+id/TuHour2"/>
-
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:id="@+id/MoHour2" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:id="@+id/MoHour1" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:id="@+id/TuHour1"
-            android:layout_row="1"
-            android:layout_column="2" />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:id="@+id/WeHour1"
-            android:layout_row="1"
-            android:layout_column="3"/>
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:id="@+id/ThHour1"
-            android:layout_row="1"
-            android:layout_column="4"  />
-
-        <TextView
-            android:background="@drawable/back"
-            android:text="K"
-            android:layout_width="60dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:id="@+id/FrHour1"
-            android:layout_row="1"
-            android:layout_column="5" />
-
-        <TextView
-            android:text="M"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView21"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_row="0"
-            android:layout_column="1" />
-
-        <TextView
-            android:text="Ti"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView22"
-            android:layout_row="0"
-            android:layout_column="2"/>
-
-        <TextView
-            android:text="O"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView24"
-            android:layout_row="0"
-            android:layout_column="3" />
-
-        <TextView
-            android:text="To"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView25"
-            android:layout_row="0"
-            android:layout_column="4"/>
-
-        <TextView
-            android:text="F"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView23"
-            android:layout_row="0"
-            android:layout_column="5"/>
-
-        <TextView
-            android:text=" "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView8"
-            android:layout_row="0"
-            android:layout_column="0"/> />
-
-        <TextView
-            android:text="10.00"
-            android:gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:id="@+id/timestamp1"
-            android:layout_row="1"
-            android:layout_column="0" />
-
-
-        <TextView
-            android:text="10.00"
-            android:gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:id="@+id/timestamp2"
-            android:layout_row="2"
-            android:layout_column="0" />
-
-        <TextView
-            android:text="10.00"
-            android:gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:id="@+id/timestamp3"
-            android:layout_row="3"
-            android:layout_column="0" />
-
-
-        <TextView
-            android:text="10.00"
-            android:gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:id="@+id/timestamp4"
-            android:layout_row="4"
-            android:layout_column="0" />
-
-
-        <TextView
-            android:text="10.00"
-            android:gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:id="@+id/timestamp5"
-            android:layout_row="5"
-            android:layout_column="0" />
-
-
-        <TextView
-            android:text="10.00"
-            android:gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:id="@+id/timestamp6"
-            android:layout_row="6"
-            android:layout_column="0" />
-
-        <TextView
-            android:text="10.00"
-            android:gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:id="@+id/timestamp7"
-            android:layout_row="7"
-            android:layout_column="0" />
-
-
-        <TextView
-            android:text="10.00"
-            android:gravity="center"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:id="@+id/timestamp8"
-            android:layout_row="8"
-            android:layout_column="0" />
-
-
-
-    </GridLayout>
+        android:layout_height="match_parent"></FrameLayout>
 
 </RelativeLayout>
