--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="250sp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:id="@+id/selected_layout">
 
         <TextView
             android:text="Time"
