--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_picture"
+        android:orderInCategory="100"
+        android:title="@string/action_new_item"
+        app:showAsAction="never" />
 </menu>
