--- a/app/src/main/res/layout/shop_layout.xml
+++ b/app/src/main/res/layout/shop_layout.xml
@@ -2,13 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:text="Shop Layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="97dp"
-        android:id="@+id/textView2" />
-
+        android:layout_alignParentStart="true"
+        android:id="@+id/shop_gallery_list" />
 </RelativeLayout>
