--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-
-    <ListView
+    <LinearLayout
+        android:layout_height="0dp"
+        android:layout_weight="50"
         android:layout_width="match_parent"
-        android:layout_height="240sp"
-        android:id="@+id/next_appointment_list"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:orientation="horizontal">
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="240sp"
+            android:id="@+id/next_appointment_list"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+    </LinearLayout>
+    <LinearLayout
+        android:background="@drawable/border"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="255sp"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:id="@+id/selected_layout">
@@ -43,4 +56,5 @@
             android:layout_below="@+id/selected_cust"
             android:layout_alignParentStart="true" />
     </RelativeLayout>
-</RelativeLayout>
+        </LinearLayout>
+</LinearLayout>
