Added some camera functionality and created a new layout for adding new listings

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#d97a1a</color>
     <color name="colorPrimaryDark">#d97a1a</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="pictureBackground">#4e4e4e</color>
 </resources>
