--- a/app/src/main/res/layout/edit_gallery_item_layout.xml
+++ b/app/src/main/res/layout/edit_gallery_item_layout.xml
@@ -11,7 +11,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:minHeight="160dp"
-        android:minWidth="160dp" />
+        android:minWidth="160dp"
+        android:maxHeight="160dp"
+        android:maxWidth="160dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -69,16 +71,6 @@
         android:layout_marginTop="14dp" />
 
     <Button
-        android:text="Ny bild"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/selectedGalleryItem_photob"
-        android:layout_alignBottom="@+id/selectedGalleryItem_image"
-        android:layout_toEndOf="@+id/selectedGalleryItem_name"
-        android:layout_marginStart="36dp"
-        android:layout_marginBottom="55dp" />
-
-    <Button
         android:text="Avbryt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -95,5 +87,15 @@
         android:layout_alignBaseline="@+id/selectedGalleryItem_cancelb"
         android:layout_alignBottom="@+id/selectedGalleryItem_cancelb"
         android:layout_alignEnd="@+id/selectedGalleryItem_photob" />
+
+    <Button
+        android:text="Ny bild"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/selectedGalleryItem_photob"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="53dp"
+        android:layout_alignBottom="@+id/selectedGalleryItem_image"
+        android:layout_toEndOf="@+id/selectedGalleryItem_name" />
 
 </RelativeLayout>
