--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,11 +4,9 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_settings" />
     <item
         android:id="@+id/action_picture"
         android:orderInCategory="100"
-        android:title="@string/action_new_item"
-        app:showAsAction="never" />
+        android:title="@string/action_new_item" />
 </menu>
