--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#4fa5d5" />ffffff
+            <solid android:color="#ffdb99" />
         </shape>
     </item>
     <item android:left="2dp" android:right="2dp"  android:top="2dp" >
