--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -8,7 +8,8 @@
         android:layout_height="0dp"
         android:layout_weight="50"
         android:layout_width="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <ListView
             android:layout_width="match_parent"
