Added text fields for information about new item

--- a/app/src/main/res/layout/new_shop_item.xml
+++ b/app/src/main/res/layout/new_shop_item.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent" >
+
+    <FrameLayout
+        android:id="@+id/new_item_framelayout"
+        android:background="#ffffff"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </FrameLayout>
 
     <HorizontalScrollView
         android:id="@+id/new_item_HScrollView"
@@ -10,20 +17,76 @@
 
         <LinearLayout
             android:id="@+id/new_item_linear"
+            android:gravity="left"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
-
+            android:layout_height="200dp"
+            android:orientation="horizontal">
         </LinearLayout>
 
     </HorizontalScrollView>
 
     <ImageButton
         android:id="@+id/new_picture_button"
-        android:src="@android:drawable/ic_input_add"
+        android:src="@android:drawable/ic_menu_camera"
         android:layout_alignBottom="@+id/new_item_HScrollView"
         android:layout_alignEnd="@+id/new_item_HScrollView"
-        android:background="@color/pictureBackground"
+        android:background="#00ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <EditText
+    android:id="@+id/beskrivning"
+    android:hint="Description"
+    android:padding="20dp"
+    android:layout_below="@+id/new_item_HScrollView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/Model"
+        android:hint="Model"
+        android:padding="20dp"
+        android:layout_below="@+id/beskrivning"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/item_price"
+        android:hint="Pice"
+        android:padding="20dp"
+        android:layout_below="@+id/Model"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/item_previous_owner"
+        android:hint="Previous owner"
+        android:padding="20dp"
+        android:layout_below="@+id/item_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/item_maker"
+        android:hint="Maker"
+        android:padding="20dp"
+        android:layout_below="@+id/item_previous_owner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/new_item_done"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="Done"/>
+
+    <Button
+        android:id="@+id/new_item_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Cancel"/>
 
 </RelativeLayout>
