--- a/app/src/main/res/layout/new_shop_item.xml
+++ b/app/src/main/res/layout/new_shop_item.xml
@@ -34,53 +34,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:layout_below="@+id/new_item_HScrollView"
+    <EditText
+        android:id="@+id/new_item_model"
+        android:hint="Model"
+        android:padding="20dp"
+        android:layout_below="@+id/new_item_desc"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/new_item_desc"
-            android:hint="Description"
-            android:padding="20dp"
-            android:layout_below="@+id/new_item_HScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/new_item_price"
+        android:hint="Pice"
+        android:padding="20dp"
+        android:layout_below="@+id/new_item_model"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/new_item_model"
-            android:hint="Model"
-            android:padding="20dp"
-            android:layout_below="@+id/new_item_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <EditText
-            android:id="@+id/new_item_price"
-            android:hint="Pice"
-            android:padding="20dp"
-            android:layout_below="@+id/new_item_model"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <EditText
-            android:id="@+id/new_item_previous_owner"
-            android:hint="Previous owner"
-            android:padding="20dp"
-            android:layout_below="@+id/new_item_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <EditText
-            android:id="@+id/new_item_maker"
-            android:hint="Maker"
-            android:padding="20dp"
-            android:layout_below="@+id/new_item_previous_owner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
+    <EditText
+        android:id="@+id/new_item_previous_owner"
+        android:hint="Previous owner"
+        android:padding="20dp"
+        android:layout_below="@+id/new_item_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/new_item_done"
@@ -88,13 +64,31 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:text="Done"/>
+        android:text="Publicera"/>
 
     <Button
         android:id="@+id/new_item_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="Cancel"/>
+        android:text="Avbryt"/>
+
+    <EditText
+    android:id="@+id/new_item_desc"
+    android:hint="Description"
+    android:padding="20dp"
+        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        android:layout_below="@+id/new_item_HScrollView"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/new_item_maker"
+        android:hint="Maker"
+        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/new_item_previous_owner"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
