--- a/app/src/main/res/layout/edit_gallery_item_layout.xml
+++ b/app/src/main/res/layout/edit_gallery_item_layout.xml
@@ -3,6 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Desc"
+        android:ems="10"
+        android:id="@+id/selectedGalleryItem_current_owner"
+        android:layout_below="@+id/selectedGalleryItem_desc"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Desc"
+        android:ems="10"
+        android:id="@+id/selectedGalleryItem_desc"
+        android:layout_below="@+id/statictext_desc"
+        android:layout_alignParentStart="true" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,7 +41,7 @@
         android:inputType="textPersonName"
         android:text="Name"
         android:ems="10"
-        android:id="@+id/selectedGalleryItem_name"
+        android:id="@+id/selectedGalleryItem_model"
         android:layout_below="@+id/statictext_name"
         android:layout_alignParentStart="true" />
 
@@ -29,19 +49,9 @@
         android:text="Kostnad:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/selectedGalleryItem_name"
+        android:layout_below="@+id/selectedGalleryItem_model"
         android:layout_alignParentStart="true"
         android:id="@+id/statictext_price" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Price"
-        android:ems="10"
-        android:id="@+id/selectedGalleryItem_price"
-        android:layout_below="@+id/statictext_price"
-        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="Beskrivning:"
@@ -50,16 +60,6 @@
         android:layout_below="@+id/selectedGalleryItem_price"
         android:layout_alignParentStart="true"
         android:id="@+id/statictext_desc" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Desc"
-        android:ems="10"
-        android:id="@+id/selectedGalleryItem_desc"
-        android:layout_below="@+id/statictext_desc"
-        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="Namn:"
@@ -96,7 +96,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginBottom="53dp"
         android:layout_alignBottom="@+id/selectedGalleryItem_image"
-        android:layout_toEndOf="@+id/selectedGalleryItem_name" />
+        android:layout_toEndOf="@+id/selectedGalleryItem_model" />
 
     <Button
         android:text="TA BORT"
@@ -105,5 +105,25 @@
         android:layout_alignTop="@+id/selectedGalleryItem_publishb"
         android:layout_centerHorizontal="true"
         android:id="@+id/selectedGalleryItem_deleteb" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Desc"
+        android:ems="10"
+        android:id="@+id/selectedGalleryItem_previous_owner"
+        android:layout_above="@+id/selectedGalleryItem_cancelb"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Price"
+        android:ems="10"
+        android:id="@+id/selectedGalleryItem_price"
+        android:layout_below="@+id/statictext_price"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
