--- a/app/src/main/res/layout/schedule_layout.xml
+++ b/app/src/main/res/layout/schedule_layout.xml
@@ -4,19 +4,13 @@ android:orientation="horizontal"
 android:layout_width="match_parent"
 android:layout_height="match_parent">
 
-
 <LinearLayout
     android:layout_width="10dp"
     android:layout_weight="8"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/titlea"
-        android:layout_width="match_parent"
-        android:layout_height="12dp"
-        android:layout_weight="1"
-        android:text="v. 0"
-        />
+    android:orientation="vertical"
+    android:paddingTop="20dp">
+
     <TextView
         android:id="@+id/testtext1"
         android:layout_width="match_parent"
